feat: estilizando botoes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
             rel="stylesheet"
         />
     </head>
-    <body>
-        <header>
-            <div class="container">
-                <h1>Teste</h1>
-            </div>
-        </header>
-      
+    <body class="flex gap-1">
+        <button class="btn btn-sm">Label</button>
+        <button class="btn btn-md">Label</button>
+        <button class="btn btn-lg">Label</button>
     </body>
+    <div class="flex gap-1">
+        <button aria-label="Label" class="btn btn-sm"></button>
+        <button aria-label="Label" class="btn btn-md"></button>
+        <button aria-label="Label" class="btn btn-lg"></button>
+    </div>
 </html>
