--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
         />
     </head>
     <body class="flex gap-1">
-        <button class="btn btn-sm">Label</button>
-        <button class="btn btn-md">Label</button>
-        <button class="btn btn-lg">Label</button>
+        <a href="#" class="social" aria-label="tiktok"></a>
+        <a href="#" class="social" aria-label="instagram"></a>
+        <a href="#" class="social" aria-label="twitter"></a>
+        <a href="#" class="social" aria-label="discord"></a>
     </body>
-    <div class="flex gap-1">
-        <button aria-label="Label" class="btn btn-sm"></button>
-        <button aria-label="Label" class="btn btn-md"></button>
-        <button aria-label="Label" class="btn btn-lg"></button>
-    </div>
 </html>
