--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
             rel="stylesheet"
         />
     </head>
-    <body class="flex gap-1">
-        <a href="#" class="social" aria-label="tiktok"></a>
-        <a href="#" class="social" aria-label="instagram"></a>
-        <a href="#" class="social" aria-label="twitter"></a>
-        <a href="#" class="social" aria-label="discord"></a>
+    <body>
+        <header>
+            <div class="container py-base">
+                <nav class="flex items-center gap-1.5">
+                    <a href=""><img src="assets/logo.svg" alt="logo" /></a>
+                    
+                    <a href="#about" class="desktop-only">Conheça o app</a>
+                    <a href="#features" class="desktop-only">Funcionalidade</a>
+                    <a href="#pricing" class="desktop-only">Planos e preços</a>
+
+                    <a href="#download" class="btn btn-sm">Baixar agora</a>
+                </nav>
+            </div>
+        </header>
     </body>
 </html>
