--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container py-base">
                 <nav class="flex items-center gap-1.5">
                     <a href=""><img src="assets/logo.svg" alt="logo" /></a>
-                    
+
                     <a href="#about" class="desktop-only">Conheça o app</a>
                     <a href="#features" class="desktop-only">Funcionalidade</a>
                     <a href="#pricing" class="desktop-only">Planos e preços</a>
@@ -27,5 +27,20 @@
                 </nav>
             </div>
         </header>
+        <section id="hero">
+            <div class="container py-xl">
+                <img src="assets/music-bars.svg" alt="" />
+                <h1>Quem canta seus males espanta</h1>
+                <p>Cantar nunca foi tão fácil</p>
+                <div class="buttons flex items-center gap-1">
+                    <a
+                        href="#pricing"
+                        aria-label="Ver planos"
+                        class="btn btn-md"
+                    ></a>
+                    <a href="#download" class="btn btn-md">Baixar agora</a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
